fix architecture tests